log
Wed, Mar 26, 2025  8:24:28 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:41:07 AM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7fa7fea
Wed, Mar 26, 2025  8:44:06 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
6d5a222
Wed, Mar 26, 2025  8:46:11 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
3cd6028
Wed, Mar 26, 2025  8:49:09 AM: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
f6ba146
Wed, Mar 26, 2025  8:52:02 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e86e79f
Wed, Mar 26, 2025  8:52:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4429b7a
Wed, Mar 26, 2025  8:53:25 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c2e6183
Wed, Mar 26, 2025  8:54:16 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
105a75f
Wed, Mar 26, 2025  8:59:50 AM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
1f66d80
Wed, Mar 26, 2025  9:09:44 AM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7422bb9
Wed, Mar 26, 2025  9:22:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:111:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
94b9e51
Wed, Mar 26, 2025  9:22:17 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
ab6703b
